test/undefLhs.slq

def main(){
	b[0]:=0; /// error
}
